[tool.poetry]
name = "streamlit-io"
version = "0.1.0"
description = ""
authors = ["nilo-lima <nilo.lima@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
streamlit-pandas-profiling = "^0.1.3"
streamlit-elements = "==0.1.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
